--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backend-mec_express",
   "version": "1.0.0",
   "description": "Banckend for WEBSITE",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "whusher",
   "license": "ISC",
